fix: Sidebar collapse width

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .ant-layout-sider-collapsed .ant-layout-sider-trigger {
-  width: 90px !important;
+  width: 80px !important;
   z-index: 1000 !important;
 }
 
